<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="fiskur">Fiskur</string>
    <string name="app_name">Screens</string>
    <string name="action_settings">Settings</string>
    <string name="action_get">Add Image</string>
    <string name="action_share">Share Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">Screens</string>
    <string name="about_web">web: fiskur.eu</string>
    <string name="action_view">Change grid layout</string>

</resources>