<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="70"
        android:showAsAction="always"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_view"
        android:icon="@drawable/row"
        android:orderInCategory="80"
        android:showAsAction="always"
        android:title="@string/action_view"/>
    <item
        android:id="@+id/action_get"
        android:icon="@drawable/set_wallpaper"
        android:orderInCategory="95"
        android:showAsAction="always"
        android:title="@string/action_get"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>