<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AboutActivity" >
    
    <ImageView
        android:id="@+id/fiskur_logo"
        android:contentDescription="@string/fiskur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fiskur_logo" />

    <TextView
        android:id="@+id/about_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about" />
 	
 	<TextView
        android:id="@+id/about_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_web" />
 	
/>


</LinearLayout>